# PapyrusPad

./: README.md  pyproject.toml
resources/: styles.qss
resources/styles/: _app.scss
src/PapyrusPad/app/: __main__.py  app_instance.py  application.py  main.py
src/PapyrusPad/app/widgets/: editor_widget.py  my_widget.py
src/PapyrusPad/app/windows/: main_window.py
src/qt_helpers/: factory.py  main_window_base.py  mixins.py  setup_functions_mixins.py  setup_functions_protocols.py  widget.py  widget_base.py  widget_factory.py  window.py
